= LitleOnline CHANGELOG

== Version 8.25.4 (June 6, 2014)
* Feature: Migrate build to Gradle

== Version 8.25.3 (May 1, 2014)
* Bug: Using the LitleResponseProcessor to check for responses would never work with EcheckSales.
* Feature: Make it possible to load properties file from classpath

== Version 8.25.2 (April 3, 2014)
* Feature: Add support to multi step SFTP batching. Now this process can be done in up to three steps: generate batch file, send file and retrieve file.
* Feature: Improved performance when creating multiple instances of LitleOnline. 

== Version 8.25.1 (March 21, 2014)
* Bugfix: delete the reports directory on clean in build.xml

== Version 8.25.0 (March 6,2014)
* Feature: Added support for ROAM: Authorization, ForceCapture, CaptureGivenAuth, Sale, Credit

== Version 8.24.0 (February 5,2014)
* Feature: Added new element triggered rule in supoort of advancedFraudResultsType

== Version 8.23.1 (Decemeber 19, 2013)
* Bugfix: Made the sdk and xml versions global constants

== Version 8.23.0 (December 18, 2013)
* Feature: Advanced Fraud Tool Support
* Feature: Added new elements in support of CAT transactions.

== Version 8.22.1 (December 18, 2013)
* Bugfix: Corrected sdk version in batch & xml version in online and batch
* Bugfix: Changed the hardcoded xsd files to be generated correctly when built

== Version 8.22.0 (October 22, 2013)
* Feature: Support for the following new gift card transactions: ActivateReversal, DeactivateReversal, LoadReversal, RefundReversal, UnloadReversal, DepositReversal
* Feature: UpdateSubscription now can take token or paypage updates, and can return token in the response
* Feature: Support for virtualGiftCard in giftCard activations and can be returned in EnhancedAuthResponses
* Feature: Gift Card responses can be returned from AuthReversal

== Version 8.21.0 (September 20, 2013)

* Feature: Support for the following new recurring transactions: CreatePlan, UpdatePlan