@@ -1,6 +1,10 @@
 apply plugin : 'eclipse'
 apply plugin : 'java'
 apply plugin : 'jacoco'
+apply plugin : 'maven'
+
+group = 'com.litle'
+version = JAR_VERSION
 
 repositories {
     mavenCentral()
@@ -8,9 +12,12 @@ repositories {
 
 configurations {
     functionalTestCompile.extendsFrom testCompile
-    functionalTestCompile.extendsFrom testRuntime
-    certificationTestCompile.extendsFrom testCompile
-    certificationTestCompile.extendsFrom testRuntime
+    functionalTestRuntime.extendsFrom testRuntime
+    
+    certificationTestCompile.extendsFrom functionalTestCompile
+    certificationTestRuntime.extendsFrom functionalTestCompile
+    
+    generateJAXB.extendsFrom mainRuntime
 }
 
 sourceSets {
@@ -35,22 +42,15 @@ sourceSets {
 
 dependencies{
     compile group:'com.jcraft', name:'jsch', version:'0.1.51'
-    compile group:'com.sun.xml.bind', name:'jaxb-impl', version:'2.2.5'
-    compile group:'commons-logging', name:'commons-logging', version:'1.1.1'
-    compile group:'javax.activation', name:'activation', version:'1.1.1'
-    compile group:'javax.xml.bind', name:'jaxb-api', version:'2.2.6'
-    compile group:'javax.xml.bind', name:'jsr173_api', version:'1.0'
-    compile group:'org.apache.directory.studio', name:'org.apache.commons.codec', version:'1.6'
-    compile group:'org.apache.httpcomponents', name:'fluent-hc', version:'4.2.3'
+    compile group:'commons-io', name:'commons-io', version:'2.4'
     compile group:'org.apache.httpcomponents', name:'httpclient', version:'4.2.3'
-    compile group:'org.apache.httpcomponents', name:'httpclient-cache', version:'4.2.3'
-    compile group:'org.apache.httpcomponents', name:'httpcore', version:'4.2.2'
-    compile group:'org.apache.httpcomponents', name:'httpmime', version:'4.2.3'
-    
-    runtime group:'com.sun.xml.bind', name:'jaxb-xjc', version:'2.2.5'
     
     testCompile group:'junit', name:'junit', version:'4.11'
     testCompile group:'org.mockito', name:'mockito-all', version:'1.9.5'
+    
+    generateJAXB group:'com.sun.xml.bind', name:'jaxb-core', version:'2.2.7'
+    generateJAXB group:'com.sun.xml.bind', name:'jaxb-impl', version:'2.2.5-5'
+    generateJAXB group:'com.sun.xml.bind', name:'jaxb-xjc', version:'2.2.5'
 }
 
 ////////// PLUGIN CONFIGURATION ////////// 
@@ -158,7 +158,7 @@ task generateJaxbClasses(dependsOn: processXsd) {
     }
      
     doLast {
-        ant.taskdef(name: "xjc", classname:"com.sun.tools.xjc.XJCTask", classpath:project.sourceSets.main.runtimeClasspath.asPath)
+        ant.taskdef(name: "xjc", classname:"com.sun.tools.xjc.XJCTask", classpath:configurations.generateJAXB.asPath)
         ant.xjc(destdir:"${generatedDir}", package: "com.litle.sdk.generate", binding:bindingsFile, extension:'true'){
             schema(dir:"${processXsd.xsdOutput}", includes:"litleOnline_v${SCHEMA_VERSION}.xsd,litleBatch_v${SCHEMA_VERSION}.xsd")
         }
@@ -223,4 +223,13 @@ task zipKit(type:Zip, dependsOn:[copyJarToKit, copyLibsToKit]){
 task kit(dependsOn:[tarKit, zipKit]){
     build.dependsOn it
     dependsOn javadoc
+}
+
+task sourceJar(type:Jar) {
+    build.dependsOn it
+    dependsOn generateJaxbClasses
+    destinationDir = file("${buildDir}/dist")
+    classifier = 'sources'
+    from "src/main/java"
+    from generateJaxbClasses.generatedDir
 }
