@@ -112,7 +112,8 @@ public class LitleBatchResponse {
 	 * @param processor
 	 * @return true or false, indicating whether another transaction was read.
 	 */
-	public boolean processNextTransaction(LitleResponseProcessor processor){
+	@SuppressWarnings("unchecked")
+    public boolean processNextTransaction(LitleResponseProcessor processor){
 	    String txnXml = "";
 	    LitleTransactionInterface objToRet;
 	    try {
@@ -122,7 +123,7 @@ public class LitleBatchResponse {
         }
 
 	    try{
-	        objToRet = ((JAXBElement<TransactionType>)unmarshaller.unmarshal(new StringReader(txnXml))).getValue();
+	        objToRet = ((JAXBElement<? extends TransactionType>)unmarshaller.unmarshal(new StringReader(txnXml))).getValue();
 	    } catch (JAXBException e){
 	        throw new LitleBatchException("There was an exception while trying to unmarshall transactionResponse: " + txnXml, e);
 	    }
